proper alignment of paragraphs in plugin-content sections

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -602,6 +602,7 @@ input[type="submit"] {
   box-shadow: 0 1px 3px #ccc;
 }
 
+.plugin-content > p,
 .plugin-content form > p,
 .plugin-content form > fieldset {
   margin-left: 1em;
