--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -155,9 +155,9 @@
  <% end %>
 
 <% end %>
-<div style="padding: 1em 1em;">
-<a href="/" class="button"><%=_("Back")%></a>
-</div>
+<fieldset>
+  <%= form_back_button %>
+</fieldset>
 </div>
 </html>
 
