--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -215,5 +215,7 @@ commands	= [ "start", "stop", "restart", "reload" ]
   </li>
 <% end %>
 </ul>
-<%= link_to _("Back"), '/', :class=>"button" %>
+<fieldset>
+<%= form_back_button %>
+</fieldset>
 </div>
