--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,5 +1,3 @@
-<h1><%=_("Edit user %s") %@user.uid%></h1>
-<br>
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "digitalspaghetti.password.js" %>
@@ -68,9 +66,12 @@
  </script>
 <% end %>
 
-
-
 <% disabled = ! @permissions[:usermodify] %>
+<div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
+<%=_("Edit user %s") %@user.uid%>
+</div>
+
+<div class="plugin-content grid_12">
 
 <% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put, :id => "userForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
@@ -139,6 +140,11 @@
     <p><label id="uid-error" class="error"></label><p>
     </fieldset>
     </div>
-    <p><%= link_to _('Cancel'), {:action => :index}%><%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();" %></p>
+    <fieldset>
+      <%= link_to _('Cancel'), {:action => :index}%>
+      <%= form_str_spacer %>
+      <%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();" %>
+    </fieldset>
   </div>
 <% end %>
+</div>
