--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <%= stylesheet_link_tag "yast","grid","style","jquery.jqplot.css","jquery-ui-1.7.2.custom.css",
-      :title=>"default", :charset=>"utf-8"
+  <%= stylesheet_link_tag "yast","grid","style","jquery.jqplot.css",
+      "jquery-ui-1.7.2.custom-accordion.css", :title=>"default", :charset=>"utf-8"
       # key :cache is disabled, because user which run webyast doesn't have permission to write to 
       #             stylesheet directory and cache cannot be created.
       %>
