wrap navigation buttons with fieldset so that they don't touch the bottom-left border

--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -99,7 +99,9 @@
     > <%=_("Synchronize via Network Time Protocol (NTP)")%></label>
   </p>
 </fieldset>
+<fieldset>
   <%= form_send_buttons :disabled => disabled, :class => "button" %>
+</fieldset>
   <% end %>
 </div>
 
