--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
   <style type="text/css">
     label.error {
-	 display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50%
+         display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50%
     }
 
     .GContainer {
@@ -50,15 +50,20 @@
    });
 
    $("#user_user_password").pstrength({
-     'displayMinChar'	: false,
-       'verdicts'		: [
-	    "<%= _("Weak") %>",
-	    "<%= _("Normal") %>",
-	    "<%= _("Medium") %>",
-	    "<%= _("Strong") %>",
-	    "<%= _("Very Strong") %>"
-	  ],
+     'displayMinChar'        : false,
+       'verdicts'                : [
+            "<%= _("Weak") %>",
+            "<%= _("Normal") %>",
+            "<%= _("Medium") %>",
+            "<%= _("Strong") %>",
+            "<%= _("Very Strong") %>"
+          ],
       });
+
+   var user_accordion = $("#accordion").accordion({
+       navigation : true,
+       header     : 'fieldset legend'
+   });
  })
 
     // start password validation workaround only when "Save" button has been pressed
@@ -68,83 +73,85 @@
 
 <% disabled = ! @permissions[:usermodify] %>
 <div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
-<%=_("Edit user %s") %@user.uid%>
+  <%=_("Edit user %s") %@user.uid%>
 </div>
 
 <div class="plugin-content grid_12">
 
 <% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put, :id => "userForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
- <div class="tab-form">
-<ul class="tab-nav"> 
-  <li><a class="t_login" href="#tab_login">Login Settings</a></li> 
-  <li><a class="t_groups" href="#tab_groups">Groups</a></li> 
-  <li><a class="t_advanced" href="#tab_advanced">Advanced</a></li> 
-</ul> 
- 
-  <fieldset id="tab_login">
-    <p>
-	<label><%=_("Login Name")%></label>
-	<%= f.text_field :uid, :disabled => disabled %>
-	<%= f.text_field :id, :class => "hidden" %>
-    </p>
-    <p>
-	<label><%=_("Full Name")%></label>
-	<%= f.text_field :cn , :disabled => disabled %>
-    </p>
-    <p>
-	<label><%=_("Password")%></label>
-	<%= f.password_field :user_password, :onkeyup => "if (password_validation_enabled) $('#userForm').validate().element('#user_user_password2');", :disabled => disabled %>
-    </p>
-    <p>
-	<label><%=_("Confirm Password")%></label>
-	<%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
-    </p>
-    <!-- this is a pre-generated placeholder for the validation messages -->
-    <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
-    </fieldset>
-  <fieldset id="tab_groups">
-    <p>
-	<label><%=_("Groups")%></label>
-	<%= f.text_field :grp_string, :disabled => disabled %>
-	<a href="#" class="button" onclick="open_groups_dialog();return false;">Manage Groups</a>
-    </p>
-    <p><label id="groups-error" class="error"></label><p>
-    <p>
-	<label><%=_("Default Group")%></label>
-	<%= f.text_field :groupname, :disabled => disabled %>
-    </p>
 
-    <div id="groups" style="display:none;" title="Groups"> 
-      <DIV>
-        <DIV class="GContainer" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </DIV>
-        <DIV class="GContainer" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </DIV>
-	<div><%= f.hidden_field :all_grps_string, :disabled => disabled %></div>
-      </DIV>
-    </div>
-
-  </fieldset>
-   <fieldset id="tab_advanced">
-    <p>
-	<label><%=_("Home Directory")%></label>
-	<%= f.text_field :home_directory, :disabled => disabled %>
-    </p>
-    <p>
-	<label><%=_("Login Shell")%></label>
-	<%= f.text_field :login_shell, :disabled => disabled %>
-    </p>
-    <p>
-	<label><%=_("UID Number")%></label>
-	<%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
-    </p>
-    <p><label id="uid-error" class="error"></label><p>
+  <div id="accordion">
+    <fieldset id="tab_login" class="wrapper with-background">
+      <legend><%= _("Login Settings") %></legend>
+      <div>
+        <p>
+          <label><%=_("Login Name")%></label>
+          <%= f.text_field :uid, :disabled => disabled %>
+          <%= f.text_field :id, :class => "hidden" %>
+        </p>
+        <p>
+          <label><%=_("Full Name")%></label>
+          <%= f.text_field :cn , :disabled => disabled %>
+        </p>
+        <p>
+          <label><%=_("Password")%></label>
+          <%= f.password_field :user_password, :onkeyup => "if (password_validation_enabled) $('#userForm').validate().element('#user_user_password2');", :disabled => disabled %>
+        </p>
+        <p>
+          <label><%=_("Confirm Password")%></label>
+          <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
+        </p>
+        <!-- this is a pre-generated placeholder for the validation messages -->
+        <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
+      </div>
     </fieldset>
-    </div>
-    <fieldset>
-      <%= link_to _('Cancel'), {:action => :index}%>
-      <%= form_str_spacer %>
-      <%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();" %>
+    <fieldset id="tab_groups" class="wrapper with-background">
+      <legend><%=_("Groups")%></legend>
+      <div>
+        <p>
+            <label><%=_("Groups")%></label>
+            <%= f.text_field :grp_string, :disabled => disabled %>
+            <a href="#" class="button" onclick="open_groups_dialog();return false;">Manage Groups</a>
+        </p>
+        <p><label id="groups-error" class="error"></label><p>
+        <p>
+            <label><%=_("Default Group")%></label>
+            <%= f.text_field :groupname, :disabled => disabled %>
+        </p>
+    
+        <div id="groups" style="display:none;" title="Groups"> 
+          <div>
+            <div class="GContainer" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
+            <div class="GContainer" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
+            <div><%= f.hidden_field :all_grps_string, :disabled => disabled %></div>
+          </div>
+        </div>
+      </div>
+    </fieldset>
+    <fieldset id="tab_advanced" class="wrapper with-background">
+      <legend><%= _("Advanced") %></legend>
+      <div>
+        <p>
+            <label><%=_("Home Directory")%></label>
+            <%= f.text_field :home_directory, :disabled => disabled %>
+        </p>
+        <p>
+            <label><%=_("Login Shell")%></label>
+            <%= f.text_field :login_shell, :disabled => disabled %>
+        </p>
+        <p>
+            <label><%=_("UID Number")%></label>
+            <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
+        </p>
+        <p><label id="uid-error" class="error"></label><p>
+      </div>
     </fieldset>
   </div>
+      <fieldset>
+        <%= link_to _('Cancel'), {:action => :index}%>
+        <%= form_str_spacer %>
+        <%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();" %>
+      </fieldset>
 <% end %>
 </div>
