--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -21,9 +21,9 @@
    });
 
    $("#user_user_password").pstrength({
-      'displayMinChar'	: true,
-      'minCharText'	: 'Password Strength:', 
-      'verdicts'	: [
+      'displayMinChar'      : true,
+      'minCharText'      : 'Password Strength:', 
+      'verdicts'      : [
             "<%= _("Weak") %>",
             "<%= _("Normal") %>",
             "<%= _("Medium") %>",
@@ -31,6 +31,11 @@
             "<%= _("Very Strong") %>"
           ],
       });
+
+   $("#accordion").accordion({
+      navigation : true,
+      header     : 'fieldset legend'
+   });
 
  })
 
@@ -55,90 +60,78 @@
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "userForm", :autocomplete => :off}  do |f| %>
   <%= f.error_messages %>
 
-  <fieldset class="wrapper with-background">
-    <legend> Basic User Data</legend>
-    <p>
-	<label><%=_("Full Name")%></label>
-	<%= f.text_field :cn %>
-    </p>
-    <p>
-	<label><%=_("Login Name")%></label>
-	<%= f.text_field :uid, :class => "required", :onkeyup => "$('#userForm').validate().element('#user_uid');" %>
-    </p>
-    <p>
-	<label><%=_("Password")%></label>
-	<%= f.password_field :user_password, :class => "required", :onkeyup => "$('#userForm').validate().element('#user_user_password');"%>
-    </p>
-    <p>
-	<label><%=_("Confirm Password")%></label>
-	<%= f.password_field :user_password2, :equalTo => "#user_user_password",:class => "required", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
-    </p>
-    <!-- this is a pre-generated placeholder for the validation messages -->
-    <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
-
-  </fieldset>
-<p id="hidedetails" style="display: none">
-    <%= link_to_function _("Hide Details") do |p|
-          p.visual_effect( :slide_up,   :argumentdetail, {:duration => 0} )
-          p.visual_effect( :switch_off, :hidedetails,    {:duration => 0} )
-          p.visual_effect( :switch_on,  :showdetails,    {:duration => 0} )
-        end
-    %>
-</p>
- <p id="showdetails">
-    <%= link_to_function _("Show Details") do |p|
-          p.visual_effect( :slide_down, :argumentdetail, {:duration => 0} )
-          p.visual_effect( :switch_off, :showdetails,    {:duration => 0} )
-          p.visual_effect( :switch_on,  :hidedetails,    {:duration => 0} )
-        end
-    %>
-  </p>
-<div id="argumentdetail" style="display: none">
-  <fieldset class="wrapper with-background">
-    <legend>Group Membership</legend>
-    <p>
-	<label><%=_("Groups")%></label>
-	<%= f.text_field :grp_string %>
-	<a href="#" class="button" onclick="open_groups_dialog();return false;">Manage Groups</a>
-    </p>
-    <p><label id="groups-error" class="error"></label><p>
-    <p>
-	<label><%=_("Default Group (GID)")%></label>
-	<%= f.text_field :groupname %>
-    </p>
-    <div id="groups" style="display:none;" title="Groups"> 
-      <DIV>
-        <DIV class="GContainer" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </DIV>
-        <DIV class="GContainer" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </DIV>
-	<div><%= f.hidden_field :all_grps_string %></div>
-      </DIV>
-    </div>
-  </fieldset>
-  <fieldset class="wrapper with-background">
-    <legend>Detailed User Data </legend>
-    <p>
-	<label><%=_("UID Number")%></label>
-	<%= f.text_field :uid_number, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
-    </p>
-    <p>
-	<label><%=_("Home Directory")%></label>
-	<%= f.text_field :home_directory %>
-    </p>
-    <p>
-        <%=_("Do not create home directory")%>
-        <input type="checkbox" name="nohome" value="true" >
-    </p>
-    <p>
-	<label><%=_("Login Shell")%></label>
-	<%= f.text_field :login_shell %>
-    </p>
-   </fieldset>
+  <div id="accordion">
+    <fieldset class="wrapper with-background">
+      <legend> Basic User Data</legend>
+      <div>
+        <p>
+          <label><%=_("Full Name")%></label>
+          <%= f.text_field :cn %>
+        </p>
+        <p>
+          <label><%=_("Login Name")%></label>
+          <%= f.text_field :uid, :class => "required", :onkeyup => "$('#userForm').validate().element('#user_uid');" %>
+        </p>
+        <p>
+          <label><%=_("Password")%></label>
+          <%= f.password_field :user_password, :class => "required", :onkeyup => "$('#userForm').validate().element('#user_user_password');"%>
+        </p>
+        <p>
+          <label><%=_("Confirm Password")%></label>
+          <%= f.password_field :user_password2, :equalTo => "#user_user_password",:class => "required", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
+        </p>
+        <!-- this is a pre-generated placeholder for the validation messages -->
+        <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
+      </div>
+    </fieldset>
+    <fieldset class="wrapper with-background">
+      <legend>Group Membership</legend>
+      <div>
+        <p>
+          <label><%=_("Groups")%></label>
+          <%= f.text_field :grp_string %>
+          <a href="#" class="button" onclick="open_groups_dialog();return false;">Manage Groups</a>
+        </p>
+        <p><label id="groups-error" class="error"></label><p>
+        <p>
+          <label><%=_("Default Group (GID)")%></label>
+          <%= f.text_field :groupname %>
+        </p>
+        <div id="groups" style="display:none;" title="Groups"> 
+          <div>
+            <div class="GContainer" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
+            <div class="GContainer" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
+          <div><%= f.hidden_field :all_grps_string %></div>
+          </div>
+        </div>
+      </div>
+    </fieldset>
+    <fieldset class="wrapper with-background">
+      <legend>Detailed User Data </legend>
+      <div>
+        <p>
+          <label><%=_("UID Number")%></label>
+          <%= f.text_field :uid_number, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
+        </p>
+        <p>
+          <label><%=_("Home Directory")%></label>
+          <%= f.text_field :home_directory %>
+        </p>
+        <p>
+            <%=_("Do not create home directory")%>
+            <input type="checkbox" name="nohome" value="true" >
+        </p>
+        <p>
+          <label><%=_("Login Shell")%></label>
+          <%= f.text_field :login_shell %>
+        </p>
+      </div>
+    </fieldset>
   </div>
-    <p>
-      <%= link_to _('Cancel'), {:action => :index}%>
-      <%= form_str_spacer %>
-      <%= f.submit _("Save"), :onclick=>"return user_validation();" %>
-    </p>
-  </div> 
+  <fieldset>
+    <%= link_to _('Cancel'), {:action => :index}%>
+    <%= form_str_spacer %>
+    <%= f.submit _("Save"), :onclick=>"return user_validation();" %>
+  </fieldset>
 <% end %>
-
+</div>
