--- a/plugins/software/app/views/repositories/show.html.erb
+++ b/plugins/software/app/views/repositories/show.html.erb
@@ -41,72 +41,73 @@
 
 
 <% disabled = ! @permissions[:write] %>
-
-<% if @adding -%>
-  <h3><%= _("Add a new repository") -%></h3>
-<% else %>
-  <h3><%= disabled ? _("Repository Properties") : _("Edit Repository Properties") -%></h3>
-<% end -%>
-
-<br/>
-
+<div class='plugin-icon'><img src='/icons/yast-online_update.png'/>
+  <%= _("Software Repositories") %>
+  <%= header_spacer %>
+  <%= if @adding then
+        _("Add a new repository")
+      else
+        disabled ? _("Properties of") : _("Edit Properties of") + " "+@repo.name
+      end
+      -%>
+</div>
+<div class='plugin-content grid_12'>
 <% form_for(:repository, @repo, :url => { :action => (@adding ? 'create' : 'update'), :id => @repo.id }, :html => { :method => (@adding ? :post : :put), :id => 'repositoryForm', :onsubmit => "if ($('#repositoryForm').valid()) {$('#progress').show(); return true;} else return false;" } ) do |f| %>
   <%= f.error_messages %>
-
-  <div class="table">
-    <table class="list" cellpadding="3" cellspacing="0">
-    <tr>
- 	<th class="full" colspan="2"><%=_("Repository")%></th>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%=_("Alias")-%></strong></td>
-	<% if @adding -%>
-	  <td class="last"><%= f.text_field :id, :disabled => disabled, :class => 'repo_alias required' -%></td>
-	<% else -%>
-	  <td class="last"><strong><%= h @repo.id -%></strong></td>
-	<% end -%>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%=_("Enabled")-%></strong></td>
-	<td class="last"><%= f.check_box :enabled, :disabled => disabled -%></td>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%=_("Autorefresh")-%></strong></td>
-	<td class="last"><%= f.check_box :autorefresh, :disabled => disabled -%></td>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%= _("Name") -%></strong></td>
-	<td class="last"><%= f.text_field :name, :disabled => disabled, :class => 'required' -%></td>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%= _("URL") -%></strong></td>
-	<td class="last"><%= f.text_field :url, :disabled => disabled, :class => 'repo_url required' -%></td>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%=_("Priority")-%></strong></td>
-	<td class="last"><%= f.text_field :priority, :disabled => disabled, :min => 0, :max => 200, :class => 'digits' -%></td>
-    </tr>
-
-    <tr>
-	<td class="first" width="120"><strong><%=_("Keep downloaded packages")-%></strong></td>
-	<td class="last"><%= f.check_box :keep_packages, :disabled => disabled -%></td>
-    </tr>
-
-    </table>
-
-    <br/>
-    <p>
-      <% if !disabled -%>
-	<%= f.submit @adding ? _("Create") : _("Update") %>
-      <% end -%>
-
-      <%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"-%>
-    </p>
-  </div>
+  <fieldset class="wrapper with-background">
+    <div class="table">
+      <table class="list" cellpadding="3" cellspacing="0">
+      <tr>
+   	<th class="full" colspan="2"><%=_("Repository")%></th>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%=_("Alias")-%></strong></td>
+  	<% if @adding -%>
+  	  <td class="last"><%= f.text_field :id, :disabled => disabled, :class => 'repo_alias required' -%></td>
+  	<% else -%>
+  	  <td class="last"><strong><%= h @repo.id -%></strong></td>
+  	<% end -%>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%=_("Enabled")-%></strong></td>
+  	<td class="last"><%= f.check_box :enabled, :disabled => disabled -%></td>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%=_("Autorefresh")-%></strong></td>
+  	<td class="last"><%= f.check_box :autorefresh, :disabled => disabled -%></td>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%= _("Name") -%></strong></td>
+  	<td class="last"><%= f.text_field :name, :disabled => disabled, :class => 'required' -%></td>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%= _("URL") -%></strong></td>
+  	<td class="last"><%= f.text_field :url, :disabled => disabled, :class => 'repo_url required' -%></td>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%=_("Priority")-%></strong></td>
+  	<td class="last"><%= f.text_field :priority, :disabled => disabled, :min => 0, :max => 200, :class => 'digits' -%></td>
+      </tr>
+  
+      <tr>
+  	<td class="first" width="120"><strong><%=_("Keep downloaded packages")-%></strong></td>
+  	<td class="last"><%= f.check_box :keep_packages, :disabled => disabled -%></td>
+      </tr>
+  
+      </table>
+  </fieldset>
+  <fieldset>
+    <%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()"%>
+    <% if !disabled -%>
+      <%= form_str_spacer %>
+      <%= f.submit @adding ? _("Create") : _("Update") %>
+    <% end -%>
+  </fieldset>
 <% end %>
+</div>
