--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -73,7 +73,7 @@
 
 <% disabled = ! @permissions[:usermodify] %>
 <div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
-  <%=_("Edit user %s") %@user.uid%>
+  <%=_("Local Users") + header_spacer + _("Edit user %s") %@user.uid%>
 </div>
 
 <div class="plugin-content grid_12">
