--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -52,11 +52,10 @@
 </script>
 
 <% end %>
-
+<div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
+  <%=_("Local Users") + header_spacer + _("Add new user")%>
+</div>
 <div class="plugin-content grid_12">
-<fieldset>
-<h3><%=_("New User")%></h3>
-</fieldset>
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "userForm", :autocomplete => :off}  do |f| %>
   <%= f.error_messages %>
 
